--- a/courseology-frontend/src/components/Courses/Courses.scss
+++ b/courseology-frontend/src/components/Courses/Courses.scss
@@ -1,6 +1,18 @@
-
+@use "../../assets/sass/variables" as *;
 
 .searchResult {
-  padding: 20px 30px;
-  color: rgb(45, 13, 80)
+  padding: 30px 30px 0 30px;
+  color: $color-violet;
+}
+
+.coursesSelection {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  padding: 0 30px;
+  gap: 22px;
+}
+
+.courseCard {
+  background-color: $color-grey;
+  padding: 0 10px;
 }
