--- a/courseology-frontend/src/components/Header/Header.scss
+++ b/courseology-frontend/src/components/Header/Header.scss
@@ -1,8 +1,8 @@
-
+@use "../../assets/sass/variables" as *;
 
 .logo {
   height: 30px;
-  background-color:  rgb(45, 13, 80);
+  background-color: $color-violet;
   padding: 20px 30px;
   color: white;
 }
