--- a/courseology-frontend/src/components/Courses/Courses.scss
+++ b/courseology-frontend/src/components/Courses/Courses.scss
@@ -17,3 +17,14 @@
   background-color: $color-grey;
   padding: 0 10px;
 }
+
+button {
+  color: $color-violet;
+  background-color: $color-grey;
+  padding: 10px;
+  margin-top: 10px;
+  margin-left: 30px;
+  font-weight: bold;
+  border: none;
+  width: 150px;
+}
