final styling updates

--- a/courseology-frontend/src/components/Courses/Courses.scss
+++ b/courseology-frontend/src/components/Courses/Courses.scss
@@ -18,6 +18,12 @@
   padding: 0 10px;
 }
 
+.courseName {
+  color: $color-violet;
+  width: 240px;
+  margin-right: 40px;
+}
+
 button {
   color: $color-violet;
   background-color: $color-grey;
