--- a/courseology-frontend/src/components/NewCourse/NewCourse.scss
+++ b/courseology-frontend/src/components/NewCourse/NewCourse.scss
@@ -1,6 +1,6 @@
 @use "../../assets/sass/variables" as *;
 
-h3 {
+.headline {
   padding: 30px 30px 0 30px;
   color: $color-violet;
   display: flex;
@@ -27,13 +27,13 @@ h3 {
 h4 {
   color: $color-violet;
   width: 100px;
-  margin-right: 40px;
+  margin-right: 10px;
 }
 
 input {
   margin-left: 30px;
   margin-top: 22px;
-  width: 500px;
+  width: 800px;
   height: 30px;
   border: none;
   resize: none;
